Added a start to thyroid

--- a/01_MLP_Thyroid_Classifier/thyroid_PyTorch_mlp.ipynb
+++ b/01_MLP_Thyroid_Classifier/thyroid_PyTorch_mlp.ipynb
@@ -23,103 +23,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[INFO] Dummy encoding ['ref_src']\n",
       "[INFO] Splitting data by split ratio: 0.1\n",
       "[INFO] train dataset saved to: data/\n",
-      "[INFO] test dataset saved to: data/\n",
-      "     ThryroidClass  patient_age  patient_gender  presc_thyroxine  \\\n",
-      "2685      negative         60.0               0                0   \n",
-      "3244          sick         60.0               1                0   \n",
-      "577           sick         45.0               1                0   \n",
-      "1480      negative         20.0               1                0   \n",
-      "2980      negative         23.0               0                0   \n",
-      "...            ...          ...             ...              ...   \n",
-      "2894      negative         31.0               1                0   \n",
-      "586       negative         46.0               1                0   \n",
-      "3467          sick         71.0               1                0   \n",
-      "1768      negative         48.0               0                0   \n",
-      "1939      negative         25.0               1                0   \n",
-      "\n",
-      "      queried_why_on_thyroxine  presc_anthyroid_meds  sick  pregnant  \\\n",
-      "2685                         0                     0     0         0   \n",
-      "3244                         0                     0     0         0   \n",
-      "577                          0                     0     0         0   \n",
-      "1480                         0                     0     0         0   \n",
-      "2980                         0                     0     0         0   \n",
-      "...                        ...                   ...   ...       ...   \n",
-      "2894                         0                     0     0         0   \n",
-      "586                          0                     0     0         0   \n",
-      "3467                         0                     0     0         0   \n",
-      "1768                         0                     0     0         0   \n",
-      "1939                         0                     0     1         0   \n",
-      "\n",
-      "      thyroid_surgery  radioactive_iodine_therapyI131  ...  TSH_reading  \\\n",
-      "2685                0                               0  ...         0.50   \n",
-      "3244                0                               0  ...         0.50   \n",
-      "577                 0                               0  ...         0.97   \n",
-      "1480                0                               0  ...         1.80   \n",
-      "2980                0                               0  ...         0.78   \n",
-      "...               ...                             ...  ...          ...   \n",
-      "2894                0                               0  ...         0.95   \n",
-      "586                 0                               0  ...         6.40   \n",
-      "3467                0                               0  ...         0.60   \n",
-      "1768                0                               0  ...         3.10   \n",
-      "1939                0                               0  ...         0.10   \n",
-      "\n",
-      "      T3_measured  T3_reading  T4_measured  T4_reading  \\\n",
-      "2685            1         2.4            1        93.0   \n",
-      "3244            1         1.0            1        73.0   \n",
-      "577             1         1.1            1        77.0   \n",
-      "1480            1         1.6            1        63.0   \n",
-      "2980            1         2.0            1       102.0   \n",
-      "...           ...         ...          ...         ...   \n",
-      "2894            1         2.6            1       152.0   \n",
-      "586             1         2.3            1        64.0   \n",
-      "3467            1         1.0            1        88.0   \n",
-      "1768            1         2.5            1        90.0   \n",
-      "1939            1         1.7            1        92.0   \n",
-      "\n",
-      "      thyrox_util_rate_T4U_measured  thyrox_util_rate_T4U_reading  \\\n",
-      "2685                              1                          1.04   \n",
-      "3244                              1                          0.82   \n",
-      "577                               1                          0.86   \n",
-      "1480                              1                          1.00   \n",
-      "2980                              1                          0.97   \n",
-      "...                             ...                           ...   \n",
-      "2894                              1                          1.40   \n",
-      "586                               1                          0.98   \n",
-      "3467                              1                          0.94   \n",
-      "1768                              1                          1.03   \n",
-      "1939                              1                          0.89   \n",
-      "\n",
-      "      FTI_measured  FTI_reading  ref_src  \n",
-      "2685             1         89.0    other  \n",
-      "3244             1         89.0     SVHC  \n",
-      "577              1         89.0      SVI  \n",
-      "1480             1         63.0    other  \n",
-      "2980             1        106.0     SVHC  \n",
-      "...            ...          ...      ...  \n",
-      "2894             1        110.0    other  \n",
-      "586              1         65.0    other  \n",
-      "3467             1         94.0     SVHC  \n",
-      "1768             1         88.0     STMW  \n",
-      "1939             1        103.0    other  \n",
-      "\n",
-      "[2475 rows x 28 columns]\n"
+      "[INFO] test dataset saved to: data/\n"
      ]
     }
    ],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "def load_and_split(path, split_ratio=0.2, destination_path='data/'):\n",
+    "def load_dummy_and_split(path, dummy_cols, split_ratio=0.2, destination_path='data/'):\n",
     "    dataset = pd.read_csv(path).drop(['ID'],axis=1).dropna()\n",
+    "    # Dummy encode\n",
+    "    print(f'[INFO] Dummy encoding {dummy_cols}')\n",
+    "    dataset = pd.get_dummies(dataset, columns=dummy_cols)\n",
     "    train, test = train_test_split(dataset, test_size=split_ratio)\n",
     "    print(f'[INFO] Splitting data by split ratio: {split_ratio}')\n",
     "    train.to_csv(os.path.join(destination_path, 'train.csv'))\n",
@@ -130,8 +55,136 @@
     "\n",
     "\n",
     "# Unpack train and test dataset, ignoring the original dataset\n",
-    "_, train, test = load_and_split('data/thyroid.csv', split_ratio=0.1)\n",
+    "dataset, train, test = load_dummy_and_split('data/thyroid.csv', \n",
+    "                                      dummy_cols=['ref_src'],\n",
+    "                                      split_ratio=0.1)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['patient_age', 'patient_gender', 'presc_thyroxine',\n",
+      "       'queried_why_on_thyroxine', 'presc_anthyroid_meds', 'sick', 'pregnant',\n",
+      "       'thyroid_surgery', 'radioactive_iodine_therapyI131',\n",
+      "       'query_hypothyroid', 'query_hyperthyroid', 'lithium', 'goitre', 'tumor',\n",
+      "       'hypopituitarism', 'psych_condition', 'TSH_measured', 'TSH_reading',\n",
+      "       'T3_measured', 'T3_reading', 'T4_measured', 'T4_reading',\n",
+      "       'thyrox_util_rate_T4U_measured', 'thyrox_util_rate_T4U_reading',\n",
+      "       'FTI_measured', 'FTI_reading', 'ref_src_STMW', 'ref_src_SVHC',\n",
+      "       'ref_src_SVHD', 'ref_src_SVI', 'ref_src_other'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_colname = 'ThryroidClass'\n",
+    "X = dataset.drop(y_colname, axis=1)\n",
+    "print(X.columns)\n",
+    "Y = dataset[y_colname]\n",
+    "Y = LabelEncoder().fit_transform(Y)\n",
+    "y_train = (train[y_colname] == 'sick').astype(int)\n",
+    "x_train = train.drop(y_colname, axis=1)\n",
+    "y_test = (test[y_colname] == 'sick').astype(int)\n",
+    "x_test = test.drop(y_colname, axis=1) \n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2475\n"
+     ]
+    }
+   ],
+   "source": [
+    "class ThyroidDataset(Dataset):\n",
+    "    def __init__(self, X, Y):\n",
+    "        X = X.copy()\n",
+    "        self.x = X\n",
+    "        self.y = Y\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.y)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        return self.y[idx]\n",
+    "\n",
+    "\n",
+    "# Create train and valid datasets\n",
+    "train_ds = ThyroidDataset(x_train, y_train)\n",
+    "test_df = ThyroidDataset(x_test, y_test)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "device(type='cuda')"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Make device GPU compatible\n",
+    "def get_default_device():\n",
+    "    \"\"\"Pick GPU if available, else CPU\"\"\"\n",
+    "    if torch.cuda.is_available():\n",
+    "        return torch.device('cuda')\n",
+    "    else:\n",
+    "        return torch.device('cpu')\n",
+    "\n",
+    "get_default_device()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def to_device(data, device):\n",
+    "    \"\"\"Move tensor(s) to chosen device\"\"\"\n",
+    "    if isinstance(data, (list,tuple)):\n",
+    "        return [to_device(x, device) for x in data]\n",
+    "    return data.to(device, non_blocking=True)\n",
+    "\n",
+    "\n",
+    "class DeviceDataLoader():\n",
+    "    \"\"\"Wrap a dataloader to move data to a device\"\"\"\n",
+    "    def __init__(self, dl, device):\n",
+    "        self.dl = dl\n",
+    "        self.device = device\n",
+    "        \n",
+    "    def __iter__(self):\n",
+    "        \"\"\"Yield a batch of data after moving it to device\"\"\"\n",
+    "        for b in self.dl: \n",
+    "            yield to_device(b, self.device)\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        \"\"\"Number of batches\"\"\"\n",
+    "        return len(self.dl)"
    ]
   }
  ],
