--- a/01_MLP_Thyroid_Classifier/thyroid_PyTorch_mlp_new.ipynb
+++ b/01_MLP_Thyroid_Classifier/thyroid_PyTorch_mlp_new.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,22 +21,40 @@
     "from torch.nn import Module\n",
     "from torch.optim import SGD\n",
     "from torch.nn import BCELoss\n",
-    "from torch.nn.init import kaiming_uniform_"
+    "from torch.nn.init import kaiming_uniform_\n",
+    "from torch.nn.init import xavier_uniform_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
-    "thyroid = pd.read_csv('data/thyroid.csv').drop('Unnamed: 0', axis=1)\n",
-    "thyroid.to_csv('data/thyroid_new.csv')"
+    "thyroid = pd.read_csv('data/thyroid_new.csv').drop('ID', axis=1)\n",
+    "y_label = (thyroid['ThryroidClass']=='sick').astype(int)\n",
+    "thyroid['ThryroidClass'] = y_label\n",
+    "# Preprocess and get rid of na\n",
+    "thyroid = thyroid.dropna()\n",
+    "\n",
+    "# Scale X data\n",
+    "X = thyroid.drop('ThryroidClass', axis=1)\n",
+    "\n",
+    "#thyroid.ThryroidClass\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "import numpy as np\n",
+    "scaler = StandardScaler()\n",
+    "scaler.fit(X)\n",
+    "X = pd.DataFrame(scaler.transform(X))\n",
+    "Y = pd.Series(y_label)\n",
+    "thyroid = pd.concat([Y,X], axis=1)\n",
+    "thyroid = thyroid.dropna()\n",
+    "thyroid.to_csv('data/final.csv',header=None, index=False)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,26 +89,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "could not convert string to float: 'ThryroidClass'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m/home/gary_hutson/git_environment/PyTorch_Tutorials/01_MLP_Thyroid_Classifier/thyroid_PyTorch_mlp_new.ipynb Cell 4'\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2B10.220.0.171/home/gary_hutson/git_environment/PyTorch_Tutorials/01_MLP_Thyroid_Classifier/thyroid_PyTorch_mlp_new.ipynb#ch0000007vscode-remote?line=0'>1</a>\u001b[0m \u001b[39m# Use our data class to prepare data\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2B10.220.0.171/home/gary_hutson/git_environment/PyTorch_Tutorials/01_MLP_Thyroid_Classifier/thyroid_PyTorch_mlp_new.ipynb#ch0000007vscode-remote?line=1'>2</a>\u001b[0m dataset \u001b[39m=\u001b[39m ThryoidCSVDataset(\u001b[39m'\u001b[39;49m\u001b[39mdata/thyroid.csv\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
-      "\u001b[1;32m/home/gary_hutson/git_environment/PyTorch_Tutorials/01_MLP_Thyroid_Classifier/thyroid_PyTorch_mlp_new.ipynb Cell 3'\u001b[0m in \u001b[0;36mThryoidCSVDataset.__init__\u001b[0;34m(self, path)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2B10.220.0.171/home/gary_hutson/git_environment/PyTorch_Tutorials/01_MLP_Thyroid_Classifier/thyroid_PyTorch_mlp_new.ipynb#ch0000006vscode-remote?line=7'>8</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mX \u001b[39m=\u001b[39m df\u001b[39m.\u001b[39mvalues[:, :\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m]\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2B10.220.0.171/home/gary_hutson/git_environment/PyTorch_Tutorials/01_MLP_Thyroid_Classifier/thyroid_PyTorch_mlp_new.ipynb#ch0000006vscode-remote?line=8'>9</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39my \u001b[39m=\u001b[39m df\u001b[39m.\u001b[39mvalues[:, \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m] \u001b[39m#Assuming your outcome variable is in the first column\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2B10.220.0.171/home/gary_hutson/git_environment/PyTorch_Tutorials/01_MLP_Thyroid_Classifier/thyroid_PyTorch_mlp_new.ipynb#ch0000006vscode-remote?line=9'>10</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mX \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mX\u001b[39m.\u001b[39;49mastype(\u001b[39m'\u001b[39;49m\u001b[39mfloat\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B10.220.0.171/home/gary_hutson/git_environment/PyTorch_Tutorials/01_MLP_Thyroid_Classifier/thyroid_PyTorch_mlp_new.ipynb#ch0000006vscode-remote?line=10'>11</a>\u001b[0m \u001b[39m# Label encode the target as values 1 and 0 or sick and not sick\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B10.220.0.171/home/gary_hutson/git_environment/PyTorch_Tutorials/01_MLP_Thyroid_Classifier/thyroid_PyTorch_mlp_new.ipynb#ch0000006vscode-remote?line=11'>12</a>\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39my \u001b[39m=\u001b[39m LabelEncoder()\u001b[39m.\u001b[39mfit_transform(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39my)\n",
-      "\u001b[0;31mValueError\u001b[0m: could not convert string to float: 'ThryroidClass'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Use our data class to prepare data\n",
-    "dataset = ThryoidCSVDataset('data/thyroid.csv')"
+    "# Create model\n",
+    "class ThyroidMLP(Module):\n",
+    "    def __init__(self, n_inputs):\n",
+    "        super(ThyroidMLP, self).__init__()\n",
+    "        self.hidden1 = Linear(n_inputs, 10)\n",
+    "        kaiming_uniform_(self.hidden1.weight, nonlinearity='relu')\n",
+    "        self.act1 = ReLU()\n",
+    "        self.hidden2 = Linear(10, 8)\n",
+    "        kaiming_uniform_(self.hidden1.weight, nonlinearity='relu')\n",
+    "        self.act2 = ReLU()\n",
+    "        self.hidden3 = Linear(8,1)\n",
+    "        xavier_uniform_(self.hidden3.weight)\n",
+    "        self.act3 = Sigmoid()\n",
+    "\n",
+    "    def forward(self, X):\n",
+    "        #Input to the first hidden layer\n",
+    "        X = self.hidden1(X)\n",
+    "        X = self.act1(X)\n",
+    "        # Second hidden layer\n",
+    "        X = self.hidden2(X)\n",
+    "        X = self.act3(X)\n",
+    "        return X"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prepare_thyroid_dataset(path):\n",
+    "    dataset = ThryoidCSVDataset(path)\n",
+    "    train, test = dataset.split_data(split_ratio=0.1)\n",
+    "    # Prepare data loaders\n",
+    "    train_dl = DataLoader(train, batch_size=32, shuffle=True)\n",
+    "    test_dl = DataLoader(test, batch_size=1024, shuffle=False)\n",
+    "    return train_dl, test_dl\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create training loop based off our custom class\n",
+    "\n",
+    "def train_model(train_dl, model):\n",
+    "    # Define your optimisation function for reducing loss when weights are calculated \n",
+    "    # and propogated through the network\n",
+    "    criterion = BCELoss()\n",
+    "    optimizer = SGD(model.parameters(), lr=0.01, momentum=0.9)\n",
+    "    for epoch in range(100):\n",
+    "        # Create batches\n",
+    "        for i, (inputs, targets) in enumerate(train_dl):\n",
+    "            #Important to clear the gradients\n",
+    "            optimizer.zero_grad()\n",
+    "            # Compute the model output\n",
+    "            yhat = model(inputs)\n",
+    "            # Calculate the loss method\n",
+    "            \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
