Model eval working

--- a/01_MLP_Thyroid_Classifier/thyroid_PyTorch_mlp_new.ipynb
+++ b/01_MLP_Thyroid_Classifier/thyroid_PyTorch_mlp_new.ipynb
@@ -154,9 +154,31 @@
     "            # Compute the model output\n",
     "            yhat = model(inputs)\n",
     "            # Calculate the loss method\n",
-    "            \n",
+    "            loss = criterion(yhat, targets)\n",
+    "            # Update model weights through back propogation\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def evaluate_model(test_dl, model):\n",
+    "    preds = []\n",
+    "    actual = []\n",
+    "\n",
+    "    for i, (inputs, targets) in enumerate(test_dl):\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
