Added additional metrics

--- a/01_MLP_Thyroid_Classifier/thyroid_PyTorch_mlp_new.ipynb
+++ b/01_MLP_Thyroid_Classifier/thyroid_PyTorch_mlp_new.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,8 @@
     "from pandas import read_csv\n",
     "import pandas as pd\n",
     "from sklearn.preprocessing import LabelEncoder\n",
-    "from sklearn.metrics import accuracy_score, roc_auc_score\n",
+    "from sklearn.metrics import accuracy_score, roc_auc_score, precision_score, average_precision_score\n",
+    "from sklearn.metrics import confusion_matrix, recall_score, f1_score\n",
     "from torch.utils.data import Dataset\n",
     "from torch.utils.data import DataLoader\n",
     "from torch.utils.data import random_split\n",
@@ -27,13 +28,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The original Thyroid data frame contains 27 columns\n",
+      "The thyroid X data frame contains 26 columns\n"
+     ]
+    }
+   ],
    "source": [
+    "\n",
     "thyroid = pd.read_csv('data/thyroid_new.csv').drop('ID', axis=1)\n",
-    "y_label = (thyroid['ThryroidClass']=='sick').astype(int)\n",
-    "thyroid['ThryroidClass'] = y_label\n",
+    "NUM_INPUTS = len(thyroid.columns)\n",
+    "print(f'The original Thyroid data frame contains {len(thyroid.columns)} columns')\n",
+    "y_label = thyroid['ThryroidClass'] \n",
     "# Preprocess and get rid of na\n",
     "thyroid = thyroid.dropna()\n",
     "\n",
@@ -46,6 +58,7 @@
     "scaler = StandardScaler()\n",
     "scaler.fit(X)\n",
     "X = pd.DataFrame(scaler.transform(X))\n",
+    "print(f'The thyroid X data frame contains {len(X.columns)} columns')\n",
     "Y = pd.Series(y_label)\n",
     "thyroid = pd.concat([X,Y], axis=1)\n",
     "thyroid = thyroid.dropna()\n",
@@ -55,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,16 +182,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
     "import tqdm\n",
-    "def evaluate_model(test_dl, model):\n",
+    "def evaluate_model(test_dl, model, beta=1.0):\n",
     "    preds = []\n",
     "    actuals = []\n",
     "\n",
-    "    for (i, (inputs, targets)) in tqdm(enumerate(test_dl)):\n",
+    "    for (i, (inputs, targets)) in enumerate(test_dl):\n",
     "        #Evaluate the model on the test set\n",
     "        yhat = model(inputs)\n",
     "        #Retrieve a numpy weights array\n",
@@ -196,9 +209,23 @@
     "    # Stack the predictions and actual arrays vertically\n",
     "    preds, actuals = vstack(preds), vstack(actuals)\n",
     "    #Calculate metrics\n",
+    "    cm = confusion_matrix(actuals, preds)\n",
+    "    # Get descriptions of tp, tn, fp, fn\n",
+    "    tn, fp, fn, tp = cm.ravel()\n",
+    "    \n",
     "    metrics = {\n",
     "        'accuracy': accuracy_score(actuals, preds),\n",
-    "        'AU_ROC': roc_auc_score(actuals, preds)\n",
+    "        'AU_ROC': roc_auc_score(actuals, preds),\n",
+    "        'precision': precision_score(actuals, preds),\n",
+    "        'recall': recall_score(actuals, preds),\n",
+    "        'f1_score': f1_score(actuals, preds),\n",
+    "        'average_precision_score': average_precision_score(actuals, preds),\n",
+    "        'f_beta': ((1+beta**2) * precision_score(actuals, preds) * recall_score(actuals, preds)) / (beta**2 * precision_score(actuals, preds) + recall_score(actuals, preds)),\n",
+    "        'confusion_matrix': confusion_matrix(actuals, preds), \n",
+    "        'TP': tp,\n",
+    "        'FP': fp, \n",
+    "        'FN': fn, \n",
+    "        'TN': tn\n",
     "    }\n",
     "    return metrics, preds, actuals\n",
     "        "
@@ -206,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,56 +255,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_dl, test_dl = prepare_thyroid_dataset('data/final.csv')"
+    "train_dl, test_dl = prepare_thyroid_dataset('https://raw.githubusercontent.com/jbrownlee/Datasets/master/ionosphere.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2476 275\n"
+      "316 35\n",
+      "<torch.utils.data.dataset.Subset object at 0x7f25b0bb4eb0>\n"
      ]
     }
    ],
    "source": [
-    "print(len(train_dl.dataset), len(test_dl.dataset))"
+    "print(len(train_dl.dataset), len(test_dl.dataset))\n",
+    "print(train_dl.dataset)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
-     "ename": "RuntimeError",
-     "evalue": "mat1 and mat2 shapes cannot be multiplied (32x26 and 34x10)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[1;32m/home/gary_hutson/git_environment/PyTorch_Tutorials/01_MLP_Thyroid_Classifier/thyroid_PyTorch_mlp_new.ipynb Cell 12'\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2B10.220.0.171/home/gary_hutson/git_environment/PyTorch_Tutorials/01_MLP_Thyroid_Classifier/thyroid_PyTorch_mlp_new.ipynb#ch0000013vscode-remote?line=0'>1</a>\u001b[0m model \u001b[39m=\u001b[39m ThyroidMLP(\u001b[39m34\u001b[39m)\n\u001b[1;32m      <a href='vscode-notebook-cell://ssh-remote%2B10.220.0.171/home/gary_hutson/git_environment/PyTorch_Tutorials/01_MLP_Thyroid_Classifier/thyroid_PyTorch_mlp_new.ipynb#ch0000013vscode-remote?line=1'>2</a>\u001b[0m \u001b[39m# Train the model\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2B10.220.0.171/home/gary_hutson/git_environment/PyTorch_Tutorials/01_MLP_Thyroid_Classifier/thyroid_PyTorch_mlp_new.ipynb#ch0000013vscode-remote?line=2'>3</a>\u001b[0m train_model(train_dl, model)\n",
-      "\u001b[1;32m/home/gary_hutson/git_environment/PyTorch_Tutorials/01_MLP_Thyroid_Classifier/thyroid_PyTorch_mlp_new.ipynb Cell 6'\u001b[0m in \u001b[0;36mtrain_model\u001b[0;34m(train_dl, model)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B10.220.0.171/home/gary_hutson/git_environment/PyTorch_Tutorials/01_MLP_Thyroid_Classifier/thyroid_PyTorch_mlp_new.ipynb#ch0000005vscode-remote?line=10'>11</a>\u001b[0m optimizer\u001b[39m.\u001b[39mzero_grad()\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B10.220.0.171/home/gary_hutson/git_environment/PyTorch_Tutorials/01_MLP_Thyroid_Classifier/thyroid_PyTorch_mlp_new.ipynb#ch0000005vscode-remote?line=11'>12</a>\u001b[0m \u001b[39m# Compute the model output\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2B10.220.0.171/home/gary_hutson/git_environment/PyTorch_Tutorials/01_MLP_Thyroid_Classifier/thyroid_PyTorch_mlp_new.ipynb#ch0000005vscode-remote?line=12'>13</a>\u001b[0m yhat \u001b[39m=\u001b[39m model(inputs)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B10.220.0.171/home/gary_hutson/git_environment/PyTorch_Tutorials/01_MLP_Thyroid_Classifier/thyroid_PyTorch_mlp_new.ipynb#ch0000005vscode-remote?line=13'>14</a>\u001b[0m \u001b[39m# Calculate the loss method\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B10.220.0.171/home/gary_hutson/git_environment/PyTorch_Tutorials/01_MLP_Thyroid_Classifier/thyroid_PyTorch_mlp_new.ipynb#ch0000005vscode-remote?line=14'>15</a>\u001b[0m loss \u001b[39m=\u001b[39m criterion(yhat, targets)\n",
-      "File \u001b[0;32m~/anaconda3/envs/transformers-robots/lib/python3.8/site-packages/torch/nn/modules/module.py:1110\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m   <a href='file:///home/gary_hutson/anaconda3/envs/transformers-robots/lib/python3.8/site-packages/torch/nn/modules/module.py?line=1105'>1106</a>\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   <a href='file:///home/gary_hutson/anaconda3/envs/transformers-robots/lib/python3.8/site-packages/torch/nn/modules/module.py?line=1106'>1107</a>\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   <a href='file:///home/gary_hutson/anaconda3/envs/transformers-robots/lib/python3.8/site-packages/torch/nn/modules/module.py?line=1107'>1108</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   <a href='file:///home/gary_hutson/anaconda3/envs/transformers-robots/lib/python3.8/site-packages/torch/nn/modules/module.py?line=1108'>1109</a>\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> <a href='file:///home/gary_hutson/anaconda3/envs/transformers-robots/lib/python3.8/site-packages/torch/nn/modules/module.py?line=1109'>1110</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49m\u001b[39minput\u001b[39;49m, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   <a href='file:///home/gary_hutson/anaconda3/envs/transformers-robots/lib/python3.8/site-packages/torch/nn/modules/module.py?line=1110'>1111</a>\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[1;32m   <a href='file:///home/gary_hutson/anaconda3/envs/transformers-robots/lib/python3.8/site-packages/torch/nn/modules/module.py?line=1111'>1112</a>\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
-      "\u001b[1;32m/home/gary_hutson/git_environment/PyTorch_Tutorials/01_MLP_Thyroid_Classifier/thyroid_PyTorch_mlp_new.ipynb Cell 4'\u001b[0m in \u001b[0;36mThyroidMLP.forward\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B10.220.0.171/home/gary_hutson/git_environment/PyTorch_Tutorials/01_MLP_Thyroid_Classifier/thyroid_PyTorch_mlp_new.ipynb#ch0000003vscode-remote?line=17'>18</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, X):\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B10.220.0.171/home/gary_hutson/git_environment/PyTorch_Tutorials/01_MLP_Thyroid_Classifier/thyroid_PyTorch_mlp_new.ipynb#ch0000003vscode-remote?line=18'>19</a>\u001b[0m     \u001b[39m#Input to the first hidden layer\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell://ssh-remote%2B10.220.0.171/home/gary_hutson/git_environment/PyTorch_Tutorials/01_MLP_Thyroid_Classifier/thyroid_PyTorch_mlp_new.ipynb#ch0000003vscode-remote?line=19'>20</a>\u001b[0m     X \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mhidden1(X)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B10.220.0.171/home/gary_hutson/git_environment/PyTorch_Tutorials/01_MLP_Thyroid_Classifier/thyroid_PyTorch_mlp_new.ipynb#ch0000003vscode-remote?line=20'>21</a>\u001b[0m     X \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mact1(X)\n\u001b[1;32m     <a href='vscode-notebook-cell://ssh-remote%2B10.220.0.171/home/gary_hutson/git_environment/PyTorch_Tutorials/01_MLP_Thyroid_Classifier/thyroid_PyTorch_mlp_new.ipynb#ch0000003vscode-remote?line=21'>22</a>\u001b[0m     \u001b[39m# Second hidden layer\u001b[39;00m\n",
-      "File \u001b[0;32m~/anaconda3/envs/transformers-robots/lib/python3.8/site-packages/torch/nn/modules/module.py:1110\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m   <a href='file:///home/gary_hutson/anaconda3/envs/transformers-robots/lib/python3.8/site-packages/torch/nn/modules/module.py?line=1105'>1106</a>\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   <a href='file:///home/gary_hutson/anaconda3/envs/transformers-robots/lib/python3.8/site-packages/torch/nn/modules/module.py?line=1106'>1107</a>\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   <a href='file:///home/gary_hutson/anaconda3/envs/transformers-robots/lib/python3.8/site-packages/torch/nn/modules/module.py?line=1107'>1108</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   <a href='file:///home/gary_hutson/anaconda3/envs/transformers-robots/lib/python3.8/site-packages/torch/nn/modules/module.py?line=1108'>1109</a>\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> <a href='file:///home/gary_hutson/anaconda3/envs/transformers-robots/lib/python3.8/site-packages/torch/nn/modules/module.py?line=1109'>1110</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49m\u001b[39minput\u001b[39;49m, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   <a href='file:///home/gary_hutson/anaconda3/envs/transformers-robots/lib/python3.8/site-packages/torch/nn/modules/module.py?line=1110'>1111</a>\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[1;32m   <a href='file:///home/gary_hutson/anaconda3/envs/transformers-robots/lib/python3.8/site-packages/torch/nn/modules/module.py?line=1111'>1112</a>\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
-      "File \u001b[0;32m~/anaconda3/envs/transformers-robots/lib/python3.8/site-packages/torch/nn/modules/linear.py:103\u001b[0m, in \u001b[0;36mLinear.forward\u001b[0;34m(self, input)\u001b[0m\n\u001b[1;32m    <a href='file:///home/gary_hutson/anaconda3/envs/transformers-robots/lib/python3.8/site-packages/torch/nn/modules/linear.py?line=101'>102</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39minput\u001b[39m: Tensor) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Tensor:\n\u001b[0;32m--> <a href='file:///home/gary_hutson/anaconda3/envs/transformers-robots/lib/python3.8/site-packages/torch/nn/modules/linear.py?line=102'>103</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m F\u001b[39m.\u001b[39;49mlinear(\u001b[39minput\u001b[39;49m, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mweight, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mbias)\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: mat1 and mat2 shapes cannot be multiplied (32x26 and 34x10)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9 2 0 24\n",
+      "0.9230769230769231\n",
+      "0.9230769230769231\n",
+      "1.0\n",
+      "1.0\n"
      ]
     }
    ],
    "source": [
+    "# Specify the number of input dimensions\n",
     "model = ThyroidMLP(34)\n",
     "# Train the model\n",
-    "train_model(train_dl, model)\n"
+    "train_model(train_dl, model)\n",
+    "# Evaluate the model\n",
+    "results = evaluate_model(test_dl, model)[0]\n",
+    "cm = results['confusion_matrix']\n",
+    "\n",
+    "tn, fp, fn, tp = cm.ravel()\n",
+    "print(tn, fp, fn, tp)\n",
+    "\n",
+    "precision_manual = tp / (tp + fp)\n",
+    "recall_manual = tp / (tp + fn)\n",
+    "print(precision_manual)\n",
+    "print(results['precision'])\n",
+    "\n",
+    "print(recall_manual)\n",
+    "print(results['recall'])\n"
    ]
   }
  ],
